--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             <form action="index.html">
                 <img src="assets/avatar.svg">
                 <h2 class="title">Welcome</h2>
-                <button type="submit" class="btn" id="google-login-btn"><i class="fa-brands fa-google"></i>Login with Google</button>
+                <button type="button" class="btn" id="google-login-btn"><i class="fa-brands fa-google"></i>Login with Google</button>
             </form>
         </div>
     </div>
-	<script src="javascript/main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js"></script>
+    <script src="javascript/login.js"></script>
 </body>
 </html>
