--- a/user.html
+++ b/user.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin page-item</title>
+    <title>User page-item</title>
 </head>
 <body>
-    <h1>This is the admin page</h1>
+    <h1>This users page</h1>
 </body>
 </html>
