User page work started

--- a/user.html
+++ b/user.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User page-item</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sports ERP</title>
+  <link rel="stylesheet" href="css/userpage.css">
 </head>
 <body>
-    <h1>This users page</h1>
+  <div class="header">
+    <img src="assets/spsu/spsulogo.png" alt="Sports ERP Logo">
+  </div>
+  <div class="main">
+    <div class="sports-grid">
+      <div class="sport-card" onclick="window.location.href='cricket.html'">
+        <h3>Cricket</h3>
+      </div>
+      <div class="sport-card" onclick="window.location.href='badminton.html'">
+        <h3>Badminton</h3>
+      </div>
+      <div class="sport-card" onclick="window.location.href='football.html'">
+        <h3>Football</h3>
+      </div>
+      <div class="sport-card" onclick="window.location.href='basketball.html'">
+        <h3>Basketball</h3>
+      </div>
+      <div class="sport-card" onclick="window.location.href='lawn_tennis.html'">
+        <h3>Lawn Tennis</h3>
+      </div>
+      <div class="sport-card" onclick="window.location.href='table_tennis.html'">
+        <h3>Table Tennis</h3>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <p>&copy; 2024 SPSU Sports ERP</p>
+  </div>
 </body>
 </html>
