--- a/admin.html
+++ b/admin.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is the admin page</h1>
+    <script type="module" src="javascript/adminrole.js"></script>
 </body>
 </html>
