--- a/user.html
+++ b/user.html
@@ -35,5 +35,6 @@
   <div class="footer">
     <p>&copy; 2024 SPSU Sports ERP</p>
   </div>
+  <script type="module" src="javascript/userrole.js"></script>
 </body>
 </html>
