--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin page-item</title>
+    <style>
+        /* Hide content initially */
+        #content {
+            display: none;
+        }
+    </style>
 </head>
-<body>
+<body id="content">
     <h1>This is the admin page</h1>
     <script type="module" src="javascript/adminrole.js"></script>
 </body>
