--- a/user.html
+++ b/user.html
@@ -15,6 +15,9 @@
   <body id="content">
     <div class="header">
       <img src="assets/spsu/spsulogo.png" alt="Sports ERP Logo" />
+      <div class="head-link">
+        <a href="myreq.html">My Requests</a>
+      </div>
     </div>
     <div class="main">
       <div class="sports-grid">
@@ -30,8 +33,8 @@
         <div class="sport-card" data-sport="basketball">
           <h3>Basketball</h3>
         </div>
-        <div class="sport-card" data-sport="lawn_tennis">
-          <h3>Lawn Tennis</h3>
+        <div class="sport-card" data-sport="long_tennis">
+          <h3>Long Tennis</h3>
         </div>
         <div class="sport-card" data-sport="table_tennis">
           <h3>Table Tennis</h3>
@@ -44,20 +47,25 @@
       <p>&copy; 2024 SPSU Sports ERP</p>
     </div>
 
-
     <!-- Modal Popup -->
     <div id="popup-modal" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h3 id="modal-title">Sport Items</h3>
-        <div id="item-list"></div>
-        <button id="request-button">Request Items</button>
+        <div class="form-container">
+          <div class="form-image">
+            <img src="assets/cover.jpg" alt="Form Image">
+          </div>
+          <div class="form-content">
+            <h2 id="modal-title">Sport Items</h2>
+            <div id="item-list"></div>
+            <button id="request-button">Request Items</button>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- js linking -->
     <script type="module" src="javascript/userrole.js"></script> 
     <script src="javascript/userpage.js"></script>
-
   </body>
 </html>
