ok final auth Done

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
     <title>SPSU Sports Request</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ======================================== CSS Linking =========================================================== -->
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ======================================== CSS Linking =========================================================== -->
+
+
 </head>
 <body>
+
     <img class="wave" src="assets/wave.png">
     <div class="container">
         <div class="img">
@@ -21,9 +29,15 @@
             </form>
         </div>
     </div>
+
+    <!-- ============================================ JS linking ==================================================================== -->
+
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-analytics.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js"></script>
     <script type="module" src="javascript/login.js"></script>
+
+    <!-- ============================================ JS linking ==================================================================== -->
+
 </body>
 </html>
