--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>SPSU Sports Request</title>
+    <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- ======================================== CSS Linking =========================================================== -->
