--- a/user.html
+++ b/user.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sports ERP</title>
+    <title>User page</title>
+    <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
     <link rel="stylesheet" href="css/userpage.css" />
     <style>
       /* Hide content initially */
