Some changes in UI

--- a/admin.html
+++ b/admin.html
@@ -49,11 +49,11 @@
         <div class="sidenav-items">
             <a href="#" class="active" data-target="dashboard"><i class="bi bi-speedometer2"></i>Dashboard</a>
             <a href="#" data-target="pending-requests"><i class="bi bi-hourglass"></i>Pending Requests</a>
+            <a href="#" data-target="retake-items"><i class="bi bi-arrow-clockwise"></i>Retake items</a>
             <a href="#" data-target="inventory"><i class="bi bi-box-seam"></i>Inventory</a>
             <a href="#" data-target="reports"><i class="bi bi-file-spreadsheet"></i>Reports</a>
             <a href="#" data-target="activity-logs"><i class="bi bi-stack-overflow"></i>Activity Logs</a>
             <a href="#" data-target="manage-users"><i class="bi bi-person"></i>Manage Users</a>
-            <a href="#" data-target="manage-events"><i class="bi bi-calendar3-event"></i>Manage Events</a>
         </div>
     </div>
 
@@ -203,7 +203,7 @@
         <div id="manage-users" class="content-section">Manage Users Content</div>
 
         <!-- manage events -->
-        <div id="manage-events" class="content-section">Manage Events Content</div>
+        <div id="retake-items" class="content-section">Manage Events Content</div>
 
 
     </div>
