file system updated

--- a/admin.html
+++ b/admin.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="css/golbal.css">
 
 
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/admin/admin.css">
 
 
-    <link rel="stylesheet" href="css/admincontent.css">
+    <link rel="stylesheet" href="css/admin/admincontent.css">
 
 
     <!-- Bootstrap Icons CSS -->
@@ -240,7 +240,6 @@
             </div>
         </div>
 
-
         <!-- reports -->
         <div id="reports" class="content-section">Reports Content</div>
 
@@ -256,22 +255,22 @@
 
 
     <!-- JS For auth bypass -->
-    <script type="module" src="javascript/adminrole.js"></script>
+    <script type="module" src="javascript/module/admin/admin-page-auth.js"></script>
 
     <!-- Control pannel swithing js -->
-    <script src="javascript/admincontent.js"></script>
+    <script src="javascript/normal/admin/admincontent.js"></script>
 
     <!-- Dashboard Js -->
-    <script type="module" src="javascript/dashboard.js"></script>
+    <script type="module" src="javascript/module/admin/dashboard.js"></script>
 
     <!-- pending request Js -->
-    <script type="module" src="javascript/pendingreq.js"></script>
+    <script type="module" src="javascript/module/admin/pendingreq.js"></script>
 
     <!-- Retake Items JS -->
-    <script type="module" src="javascript/returnItems.js"></script>
+    <script type="module" src="javascript/module/admin/returnItems.js"></script>
 
     <!-- Manage Inventory JS -->
-    <script type="module" src="javascript/inventory.js"></script>
+    <script type="module" src="javascript/module/admin/inventory.js"></script>
 
 
 </body>
