--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SPSU Sports Request</title>
+    <title>SPSU Sports ERP</title>
     <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +37,7 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-analytics.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js"></script>
-    <script type="module" src="javascript/login.js"></script>
+    <script type="module" src="javascript/module/login.js"></script>
 
     <!-- ============================================ JS linking ==================================================================== -->
 
