user page request raising Done

--- a/user.html
+++ b/user.html
@@ -12,11 +12,15 @@
   </head>
   <body id="content">
 
-
+    <div id="sports-container"></div>
+    <div id="items-container" style="display: none;"></div>
 
 
     <!-- User Auth Js -->
     <script type="module" src="javascript/module/user/user-page-auth.js"></script>
+
+    <!-- User UI Dynamic Gen JS -->
+     <script type="module" src="javascript/module/user/user-ui-gen.js"></script>
 
   </body>
 </html>
