Done user Request raising

--- a/admin.html
+++ b/admin.html
@@ -126,8 +126,8 @@
                         <div class="req-details">
                             <p><i class="bi bi-telephone-fill bt-icons"></i> <strong>Phone no:</strong> <span
                                     id="user-phone">N/A</span></p>
-                            <p><i class="bi bi-person-vcard bt-icons"></i> <strong>Course:</strong> <span
-                                    id="user-course">N/A</span></p>
+                            <p><i class="bi bi-person-vcard bt-icons"></i> <strong>Program:</strong> <span
+                                    id="user-program">N/A</span></p>
                         </div>
                     </div>
                     <table>
