--- a/user.html
+++ b/user.html
@@ -8,13 +8,32 @@
 
     <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
     <link rel="stylesheet" href="css/user/userpage.css" />
+    <link rel="stylesheet" href="css/golbal.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   </head>
   <body id="content">
 
+    <!-- Navbar -->
+    <header class="header">
+      <nav>
+        <div class="logo">
+          <a href="index.html"><img src="assets/spsu/erplogo.png"></a>
+        </div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <ul class="menu">
+          <li><a href="user.html"><i class="bi bi-house-fill"></i> Home</a></li>
+          <li><a href="#"><i class="bi bi-backpack-fill"></i> My Requests</a></li>
+          <li><a href="#"><i class="bi bi-question-circle-fill"></i> About</a></li>
+        </ul>
+      </nav>
+    </header>
+
+
     <div id="sports-container"></div>
     <div id="items-container" style="display: none;"></div>
-
 
     <!-- User Auth Js -->
     <script type="module" src="javascript/module/user/user-page-auth.js"></script>
