--- a/user.html
+++ b/user.html
@@ -24,7 +24,7 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <ul class="menu">
-          <li><a href="user.html"><i class="bi bi-house-fill"></i> Home</a></li>
+          <li id="home-btn"><a><i class="bi bi-house-fill"></i> Home</a></li>
           <li><a href="#"><i class="bi bi-backpack-fill"></i> My Requests</a></li>
           <li><a href="#"><i class="bi bi-question-circle-fill"></i> About</a></li>
         </ul>
@@ -44,6 +44,6 @@
     
     <!-- input wokring Js -->
      <script src="javascript/normal/user/input-btn.js"></script>
-     
+
   </body>
 </html>
