--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>SPSU Sports ERP</title>
     <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
@@ -16,6 +17,7 @@
 
 
 </head>
+
 <body>
 
     <img class="wave" src="assets/wave.png">
@@ -27,7 +29,8 @@
             <form action="index.html">
                 <img src="assets/avatar.svg">
                 <h2 class="title">Welcome</h2>
-                <button type="button" class="btn" id="google-login-btn"><i class="fa-brands fa-google"></i>Login with Google</button>
+                <button type="button" class="btn" id="google-login-btn"><i class="fa-brands fa-google"></i>Login with
+                    Google</button>
             </form>
         </div>
     </div>
@@ -42,4 +45,5 @@
     <!-- ============================================ JS linking ==================================================================== -->
 
 </body>
+
 </html>
