--- a/user.html
+++ b/user.html
@@ -66,10 +66,10 @@
   <script type="module" src="javascript/module/user/user-page-auth.js"></script>
 
   <!-- User UI Dynamic Gen JS -->
-  <script type="module" src="javascript/module/user/user-ui-gen.js"></scrip >
+  <script type="module" src="javascript/module/user/user-ui-gen.js"></script>
 
-      <!-- input wokring Js -->
-      <script src="javascript/normal/user/input-btn.js"></script>
+  <!-- input wokring Js -->
+  <script src="javascript/normal/user/input-btn.js"></script>
 
 </body>
 
