email sending logic trying but not working

--- a/admin.html
+++ b/admin.html
@@ -272,6 +272,17 @@
     <!-- Manage Inventory JS -->
     <script type="module" src="javascript/module/admin/inventory.js"></script>
 
+    <!-- Email Sending JS -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+    <script type="text/javascript">
+        
+        
+        // (function () {
+        //     emailjs.init("izDs4OPXoY5Xv7XmV");
+        // })();
+    </script>
+
 
 </body>
 
