Made Dashborad files wokring

--- a/admin.html
+++ b/admin.html
@@ -78,7 +78,7 @@
                     </article>
                     <article class="stat-card">
                         <i class="bi bi-clock-history stat-icon"></i>
-                        <p class="stat-value">15</p>
+                        <p class="stat-value" id="pending-requests">...</p>
                         <h2 class="stat-label">Pending Requests</h2>
                     </article>
                     <article class="stat-card">
@@ -88,12 +88,12 @@
                     </article>
                     <article class="stat-card">
                         <i class="bi bi-trash stat-icon"></i>
-                        <p class="stat-value">5</p>
+                        <p class="stat-value" id="rejected-requests">...</p>
                         <h2 class="stat-label">Rejected Requests</h2>
                     </article>
                     <article class="stat-card">
                         <i class="bi bi-boxes stat-icon"></i>
-                        <p class="stat-value">55</p>
+                        <p class="stat-value" id="total-inventory-items">...</p>
                         <h2 class="stat-label">Current Inventory</h2>
                     </article>
                     <article class="stat-card">
