Working On user Side Nav Bar Ui

--- a/admin.html
+++ b/admin.html
@@ -78,7 +78,7 @@
                     </article>
                     <article class="stat-card">
                         <i class="bi bi-clock-history stat-icon"></i>
-                        <p class="stat-value" id="pending-requests">...</p>
+                        <p class="stat-value" id="pending-requests-stats">...</p>
                         <h2 class="stat-label">Pending Requests</h2>
                     </article>
                     <article class="stat-card">
