--- a/user.html
+++ b/user.html
@@ -23,19 +23,49 @@
       <nav>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon"><i class="bi bi-list"></i></label>
-        <ul class="menu">
-          <li><a class="close-menu" onclick="document.getElementById('menu-toggle').checked = false;"><i class="bi bi-caret-left-fill"></i></a></li>
-          <li id="home-btn" onclick="document.getElementById('menu-toggle').checked = false;" ><a><i class="bi bi-house-fill"></i> Home</a></li>
-          <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i class="bi bi-backpack-fill"></i> My Requests</a></li>
-          <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i class="bi bi-question-circle-fill"></i> About</a></li>
-        </ul>
-    
+        <div class="menu">
+          <!-- User Profile -->
+          <div class="user-profile">
+            <div class="user-icon"><i class="bi bi-person-circle"></i></div>
+            <div class="user-info">
+              <p id="user-name">...</p>
+              <p id="user-program">...</p>
+            </div>
+          </div>
+
+          <!-- Navigation items -->
+
+          <div class="nav-holder">
+            <a class="nav-title">MENU</a>
+            <div class="nav-items">
+              <li><a class="close-menu" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                    class="bi bi-caret-left-fill"></i></a></li>
+              <li id="home-btn" onclick="document.getElementById('menu-toggle').checked = false;"><a><i
+                    class="bi bi-house-fill"></i>Home</a></li>
+              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                    class="bi bi-cart-plus-fill"></i>My Requests</a></li>
+              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                    class="bi bi-broadcast"></i>Events</a></li>
+              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                    class="bi bi-question-circle-fill"></i>About us</a></li>
+            </div>
+            <a class="pow-by">
+              <i class="bi bi-lightning-fill"></i> Powerd by SPSU
+            </a>
+          </div>
+
+          <!-- Logout Btn -->
+           <div class="logout-holder">
+            <a href="index.html"><i class="bi bi-box-arrow-left"></i>LOGOUT</a>
+           </div>
+        </div>
+
         <div class="logo">
           <a href="index.html"><img src="assets/spsu/erplogo.png"></a>
         </div>
       </nav>
     </header>
-    
+
 
 
     <div id="sports-container">
