--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>SPSU Sports Erp</title>
+  <title>Your Requests</title>
 
-  <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
-  <link rel="stylesheet" href="css/user/userpage.css" />
-  <link rel="stylesheet" href="css/golbal.css">
+  <link rel="shortcut icon" href="/assets/spsu/favicon.png" type="png">
+  <link rel="stylesheet" href="/css/user/myrequest.css" />
+  <link rel="stylesheet" href="/css/golbal.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -40,9 +40,9 @@
             <div class="nav-items">
               <li><a class="close-menu" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-caret-left-fill"></i></a></li>
-              <li id="home-btn" onclick="document.getElementById('menu-toggle').checked = false;"><a><i
+              <li onclick="document.getElementById('menu-toggle').checked = false;"><a href="/user.html"><i
                     class="bi bi-house-fill"></i>Home</a></li>
-              <li><a href="pages/user/myrequest.html" onclick="document.getElementById('menu-toggle').checked = false;"><i
+              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-cart-plus-fill"></i>My Requests</a></li>
               <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-broadcast"></i>Events</a></li>
@@ -56,24 +56,16 @@
 
           <!-- Logout Btn -->
            <div class="logout-holder">
-            <a href="index.html"><i class="bi bi-box-arrow-left"></i>LOGOUT</a>
+            <a href="/index.html"><i class="bi bi-box-arrow-left"></i>LOGOUT</a>
            </div>
         </div>
 
         <div class="logo">
-          <a href="index.html"><img src="assets/spsu/erplogo.png"></a>
+          <a href="/index.html"><img src="/assets/spsu/erplogo.png"></a>
         </div>
       </nav>
     </header>
 
-
-
-    <div id="sports-container">
-      <!-- Dynamic insertion -->
-    </div>
-    <div id="items-container" style="display: none;">
-      <!-- Dynamic insertion -->
-    </div>
   </section>
 
   <!-- For web user -->
@@ -91,21 +83,13 @@
       // Replace with the actual link to download your app
       window.location.href = 'https://warehouse.appilix.com/uploads/app-apk-66b48defb2f3c-1723108847.apk';
     }
-
   </script>
 
-
   <!-- User Auth Js -->
-  <script type="module" src="javascript/module/user/user-page-auth.js"></script>
-  
+  <script type="module" src="/javascript/module/user/user-page-auth.js"></script>
+
   <!-- User Profile Gen JS -->
-  <script type="module" src="javascript/module/user/user-profile.js"></script>
-
-  <!-- User UI Dynamic Gen JS -->
-  <script type="module" src="javascript/module/user/user-ui-gen.js"></script>
-
-  <!-- input wokring Js -->
-  <script src="javascript/normal/user/input-btn.js"></script>
+  <script type="module" src="/javascript/module/user/user-profile.js"></script>
 
 </body>
 
