reject and issue updated request syst update

--- a/admin.html
+++ b/admin.html
@@ -164,8 +164,8 @@
                         </div>
                     </div>
                     <div class="action-buttons">
-                        <button onclick="rejectRequest()">Reject Request</button>
-                        <button onclick="issueItems()">Issue Items</button>
+                        <button id="reject-btn">Reject Request</button>
+                        <button id="issue-btn">Issue Items</button>
                     </div>
                 </div>
             </div>
