--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -77,13 +77,13 @@
   <!-- Modal for displaying request details -->
   <div id="request-details-modal" class="modal">
     <div class="modal-content">
-      <span class="close-button" onclick="closeModal()">&times;</span>
-      <h2>Request Details</h2>
-      <div id="request-items">
-        <!-- Request items will be displayed here -->
-      </div>
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Request Details</h2>
+        <div id="request-data"></div>
+        <div id="return-time"></div>
+        <div id="request-items"></div>
     </div>
-  </div>
+</div>
 
   </section>
 
