--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -55,9 +55,9 @@
           </div>
 
           <!-- Logout Btn -->
-           <div class="logout-holder">
+          <div class="logout-holder">
             <a href="../../index.html"><i class="bi bi-box-arrow-left"></i>LOGOUT</a>
-           </div>
+          </div>
         </div>
 
         <div class="logo">
@@ -66,24 +66,27 @@
       </nav>
     </header>
 
-    <!-- Request List -->
-  <div class="container">
-    <h1>Your Requests</h1>
-    <div id="requests-list">
-      <!-- Requests will be dynamically inserted here -->
-    </div>
-  </div>
+    <section class="main-req-shower">
+      <!-- Request List -->
+      <div class="rq-container">
+        <h1><i class="bi bi-cart4"></i>Your Requests</h1>
+        <div id="requests-list">
+          <!-- Requests will be dynamically inserted here -->
+        </div>
+      </div>
 
-  <!-- Modal for displaying request details -->
-  <div id="request-details-modal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2>Request Details</h2>
-        <div id="request-data"></div>
-        <div id="return-time"></div>
-        <div id="request-items"></div>
-    </div>
-</div>
+
+      <!-- Modal for displaying request details -->
+      <div id="request-details-modal" class="modal">
+        <div class="modal-content">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <h2>Request Details</h2>
+          <div id="request-data"></div>
+          <div id="return-time"></div>
+          <div id="request-items"></div>
+        </div>
+      </div>
+    </section>
 
   </section>
 
@@ -119,8 +122,8 @@
   <!-- User Profile Gen JS -->
   <script type="module" src="/javascript/module/user/user-profile.js"></script>
 
-   <!-- Requests and Modal Handling -->
-   <script type="module" src="/javascript/module/user/user-requests.js"></script>
+  <!-- Requests and Modal Handling -->
+  <script type="module" src="/javascript/module/user/user-requests.js"></script>
 
 </body>
 
