Yash Suggest Updates Done

--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -46,6 +46,8 @@
                     class="bi bi-cart-plus-fill"></i>My Requests</a></li>
               <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-broadcast"></i>Events</a></li>
+              <li><a onclick="document.getElementById('menu-toggle').checked = false; downloadApp()"><i
+                    class="bi bi-arrow-down-circle-fill"></i>Download App</a></li>
               <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-question-circle-fill"></i>About us</a></li>
             </div>
@@ -61,7 +63,8 @@
         </div>
 
         <div class="logo">
-          <a href="../../index.html"><img src="/assets/spsu/erplogo.png"></a>
+          <a href="../../user.html" onclick="document.getElementById('menu-toggle').checked = false;"><img
+              src="/assets/spsu/erplogo.png"></a>
         </div>
       </nav>
     </header>
