--- a/user.html
+++ b/user.html
@@ -42,10 +42,13 @@
                     class="bi bi-caret-left-fill"></i></a></li>
               <li id="home-btn" onclick="document.getElementById('menu-toggle').checked = false;"><a><i
                     class="bi bi-house-fill"></i>Home</a></li>
-              <li><a href="pages/user/myrequest.html" onclick="document.getElementById('menu-toggle').checked = false;"><i
+              <li><a href="pages/user/myrequest.html"
+                  onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-cart-plus-fill"></i>My Requests</a></li>
               <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-broadcast"></i>Events</a></li>
+              <li><a onclick="document.getElementById('menu-toggle').checked = false; downloadApp()"><i
+                    class="bi bi-arrow-down-circle-fill"></i>Download App</a></li>
               <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
                     class="bi bi-question-circle-fill"></i>About us</a></li>
             </div>
@@ -55,13 +58,14 @@
           </div>
 
           <!-- Logout Btn -->
-           <div class="logout-holder">
+          <div class="logout-holder">
             <a href="index.html"><i class="bi bi-box-arrow-left"></i>LOGOUT</a>
-           </div>
+          </div>
         </div>
 
         <div class="logo">
-          <a href="index.html"><img src="assets/spsu/erplogo.png"></a>
+          <a id="home-btn-logo" onclick="document.getElementById('menu-toggle').checked = false;"><img
+              src="assets/spsu/erplogo.png"></a>
         </div>
       </nav>
     </header>
@@ -97,7 +101,7 @@
 
   <!-- User Auth Js -->
   <script type="module" src="javascript/module/user/user-page-auth.js"></script>
-  
+
   <!-- User Profile Gen JS -->
   <script type="module" src="javascript/module/user/user-profile.js"></script>
 
