more yash Updates

--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -52,7 +52,7 @@
                     class="bi bi-question-circle-fill"></i>About us</a></li>
             </div>
             <a class="pow-by">
-              <i class="bi bi-lightning-fill"></i> Powerd by SPSU
+              <i class="bi bi-lightning-fill"></i>Powered by SPSU
             </a>
           </div>
 
